Changes to the template, and first post.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,7 @@
               <div class="contact">
                 <p>
                   Anil Madamala<br />
-                  Software Developer<br />
-                  amadamala@gmail.com
+                  anil@madamala.org
                 </p>
               </div>
               <div class="contact">
